--- a/.editorconfig
+++ b/.editorconfig
@@ -6,4 +6,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = false
 indent_style = tab
+
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 4
+
+[{COMMIT_EDITMSG,MERGE_MSG}]
+trim_trailing_whitespace = true
+max_line_length = 72
+indent_style = space
 indent_size = 4
